(fix) resolucao de problemas que referenciavam anexo/agendamento/antendimento/paciente/profissional entre camadas